# ynara-tcc

./: Introdução.py  README.md  config.toml  pyproject.toml
data/: questionario.csv
pages/: 1_1. Distribuição de Pets.py
