[tool.poetry]
name = "ynara-tcc"
version = "0.1.0"
description = ""
authors = ["Gabriel Borsero <gabriel.borsero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
streamlit = "^1.27.2"
numpy = "^1.26.0"
pandas = "^2.1.1"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
